# quark-n-ui

./: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c  pi@192.168.0.105
AHRS/: AHRS.c  AHRS.h  AHRS_MiddleWare.c  AHRS_MiddleWare.h  struct_typedef.h
lv_drivers/: CMakeLists.txt
lv_drivers/display/: fbdev.h
lv_drivers/indev/: evdev.h
lvgl/src/: lv_conf_internal.h
mpu6050_drive/: mpu6050_info.c  mpu_6050_info.h
